# 2048

./: Cargo.toml  LICENSE  README.md  flake.nix  toolchain.toml
ch0_setup/: Cargo.toml
ch1_board/: Cargo.toml
ch2_logic/: Cargo.toml
docs/translations/zh/: README.md  ch0_setup.md  step0_setup.md
step0_setup/: Cargo.toml
step0_setup/src/: main.rs
step1_board/: Cargo.toml
step1_board/src/: lib.rs
step2_logic/: Cargo.toml
