# cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = [
  "step0_setup",
  "step1_board",
]

[workspace.dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }

[profile.dev]
opt-level = 1
# codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3
# codegen-backend = "llvm"

