# cargo-features = ["codegen-backend"]

[workspace]
resolver = "3"
members = [
  "ch0_setup",
  "ch1_board",
  "ch2_logic",
]

[workspace.dependencies]
bevy = { version = "0.16.1", features = ["dynamic_linking", "wayland"] }
bevy_rand = { version = "0.11.1", features = ["wyrand"] }
rand = { version = "0.9.1" }

[profile.dev]
opt-level = 1
# codegen-backend = "cranelift"

[profile.dev.package."*"]
opt-level = 3
# codegen-backend = "llvm"

